[tool.poetry]
name = "dataset-cleaner"
version = "0.1.0"
description = ""
authors = ["JoeJohnston24"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"
tqdm = "0"
python-dateutil = "^2.9.0.post0"
spellchecker = "^0.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
